[gd_scene format=3 uid="uid://buqmnygvi1ri5"]

[ext_resource type="Script" uid="uid://dolu8t4ocmpci" path="res://playerAnimatedController.gd" id="1_3i7kr"]
[ext_resource type="Texture2D" uid="uid://wivjh6v3o11t" path="res://images/playerAnim/Attack1.png" id="2_8d5gg"]
[ext_resource type="Texture2D" uid="uid://bj4r07dr5iroh" path="res://images/playerAnim/Attack2.png" id="3_5wdo2"]
[ext_resource type="Texture2D" uid="uid://bwkcte2el5kli" path="res://images/playerAnim/Hit.png" id="4_weflv"]
[ext_resource type="Texture2D" uid="uid://do17cipxsl33r" path="res://images/playerAnim/Idle.png" id="5_1qhei"]
[ext_resource type="Texture2D" uid="uid://decbd02atleyp" path="res://images/playerAnim/Run.png" id="6_mhwia"]
[ext_resource type="PackedScene" uid="uid://myvsswghxgp" path="res://spells/barrier.tscn" id="7_5wdo2"]
[ext_resource type="Texture2D" uid="uid://nbudas1g7bwn" path="res://images/lock_icon.png" id="7_p8t1n"]
[ext_resource type="Texture2D" uid="uid://b8yl3v2e3xjop" path="res://images/staff_cursor.png" id="8_8d5gg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bhlf4"]
atlas = ExtResource("2_8d5gg")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_mm7dp"]
atlas = ExtResource("2_8d5gg")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqhpg"]
atlas = ExtResource("2_8d5gg")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s6b1"]
atlas = ExtResource("2_8d5gg")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuubw"]
atlas = ExtResource("2_8d5gg")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4lx2"]
atlas = ExtResource("2_8d5gg")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f8yg"]
atlas = ExtResource("2_8d5gg")
region = Rect2(1386, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_dli8r"]
atlas = ExtResource("2_8d5gg")
region = Rect2(1617, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyi4b"]
atlas = ExtResource("3_5wdo2")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ts2q"]
atlas = ExtResource("3_5wdo2")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_va6s5"]
atlas = ExtResource("3_5wdo2")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_2awy2"]
atlas = ExtResource("3_5wdo2")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_indqm"]
atlas = ExtResource("3_5wdo2")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tdvx"]
atlas = ExtResource("3_5wdo2")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fluu"]
atlas = ExtResource("3_5wdo2")
region = Rect2(1386, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjqk3"]
atlas = ExtResource("3_5wdo2")
region = Rect2(1617, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj0wb"]
atlas = ExtResource("4_weflv")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf5v5"]
atlas = ExtResource("4_weflv")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_an2mh"]
atlas = ExtResource("4_weflv")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5do6"]
atlas = ExtResource("4_weflv")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_yax4c"]
atlas = ExtResource("5_1qhei")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_deskq"]
atlas = ExtResource("5_1qhei")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnqdc"]
atlas = ExtResource("5_1qhei")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxm84"]
atlas = ExtResource("5_1qhei")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_omh87"]
atlas = ExtResource("5_1qhei")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7a1p"]
atlas = ExtResource("5_1qhei")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsakr"]
atlas = ExtResource("6_mhwia")
region = Rect2(0, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uh46"]
atlas = ExtResource("6_mhwia")
region = Rect2(231, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf7y1"]
atlas = ExtResource("6_mhwia")
region = Rect2(462, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1fdo"]
atlas = ExtResource("6_mhwia")
region = Rect2(693, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rqaj"]
atlas = ExtResource("6_mhwia")
region = Rect2(924, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh57s"]
atlas = ExtResource("6_mhwia")
region = Rect2(1155, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uqa5"]
atlas = ExtResource("6_mhwia")
region = Rect2(1386, 0, 231, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_glhff"]
atlas = ExtResource("6_mhwia")
region = Rect2(1617, 0, 231, 190)

[sub_resource type="SpriteFrames" id="SpriteFrames_bhlf4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhlf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mm7dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqhpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s6b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuubw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4lx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f8yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dli8r")
}],
"loop": false,
"name": &"attack1",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyi4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ts2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2awy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_indqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tdvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fluu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjqk3")
}],
"loop": false,
"name": &"attack2",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj0wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf5v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an2mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5do6")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yax4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deskq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnqdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxm84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omh87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7a1p")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsakr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uh46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf7y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1fdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rqaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh57s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uqa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glhff")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mm7dp"]
size = Vector2(8, 21)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_deskq"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnqdc"]
bg_color = Color(0.9999704, 0.10738065, 0.2793229, 1)

[sub_resource type="LabelSettings" id="LabelSettings_weflv"]
outline_color = Color(0.0142752165, 0.014275218, 0.014275218, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dnqdc"]
font_size = 12

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dnqdc"]

[sub_resource type="LabelSettings" id="LabelSettings_cxm84"]
font_size = 11

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_cxm84"]

[sub_resource type="LabelSettings" id="LabelSettings_omh87"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_l7a1p"]
font_size = 96
font_color = Color(0.75547284, 0, 0.17080006, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8d5gg"]
bg_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wdo2"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.75686276, 0.84705883, 0.19607843, 1)
anti_aliasing = false

[node name="CharacterBody2D" type="CharacterBody2D" unique_id=262399486]
z_index = 1
collision_layer = 2
collision_mask = 3
collision_priority = 5.0
script = ExtResource("1_3i7kr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=935771047]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_bhlf4")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1812995610]
position = Vector2(-2, -0.5)
shape = SubResource("RectangleShape2D_mm7dp")

[node name="Barrier" parent="." unique_id=1522064716 instance=ExtResource("7_5wdo2")]

[node name="Camera2D" type="Camera2D" parent="." unique_id=576124904]
zoom = Vector2(3, 3)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1971207022]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer" unique_id=828020454]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -58.0
offset_right = -22.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_deskq")
theme_override_styles/fill = SubResource("StyleBoxFlat_dnqdc")
show_percentage = false

[node name="HPLabel" type="Label" parent="CanvasLayer/ProgressBar" unique_id=1385077412]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_weflv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpellBar" type="HBoxContainer" parent="CanvasLayer" unique_id=591568636]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -71.0
offset_right = 20.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="FireballBox" type="Panel" parent="CanvasLayer/SpellBar" unique_id=628056113]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/SpellBar/FireballBox" unique_id=1538487610]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Fireball"
label_settings = SubResource("LabelSettings_dnqdc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownOverlay" type="TextureProgressBar" parent="CanvasLayer/SpellBar/FireballBox" unique_id=1492629913]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 3
nine_patch_stretch = true
texture_progress = SubResource("PlaceholderTexture2D_dnqdc")
tint_progress = Color(0, 0, 0, 0.5882353)

[node name="LockIcon" type="TextureRect" parent="CanvasLayer/SpellBar/FireballBox" unique_id=1345587714]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.215, 0.215)
pivot_offset = Vector2(2.5, 0)
texture = ExtResource("7_p8t1n")

[node name="LightningBox" type="Panel" parent="CanvasLayer/SpellBar" unique_id=2053766778]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/SpellBar/LightningBox" unique_id=1971073085]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Lightning"
label_settings = SubResource("LabelSettings_cxm84")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownOverlay" type="TextureProgressBar" parent="CanvasLayer/SpellBar/LightningBox" unique_id=95310503]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 3
nine_patch_stretch = true
texture_progress = SubResource("PlaceholderTexture2D_cxm84")
tint_progress = Color(0, 0, 0, 0.5882353)

[node name="LockIcon" type="TextureRect" parent="CanvasLayer/SpellBar/LightningBox" unique_id=587427780]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.215, 0.215)
pivot_offset = Vector2(2.5, 0)
texture = ExtResource("7_p8t1n")

[node name="BeamBox" type="Panel" parent="CanvasLayer/SpellBar" unique_id=453337856]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/SpellBar/BeamBox" unique_id=150197548]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Beam"
label_settings = SubResource("LabelSettings_omh87")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownOverlay" type="TextureProgressBar" parent="CanvasLayer/SpellBar/BeamBox" unique_id=1037032359]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 3
nine_patch_stretch = true
texture_progress = SubResource("PlaceholderTexture2D_dnqdc")
tint_progress = Color(0, 0, 0, 0.5882353)

[node name="LockIcon" type="TextureRect" parent="CanvasLayer/SpellBar/BeamBox" unique_id=427385361]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.215, 0.215)
pivot_offset = Vector2(2.5, 0)
texture = ExtResource("7_p8t1n")

[node name="PlantBox" type="Panel" parent="CanvasLayer/SpellBar" unique_id=2001321742]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/SpellBar/PlantBox" unique_id=563294415]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Plant"
label_settings = SubResource("LabelSettings_omh87")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownOverlay" type="TextureProgressBar" parent="CanvasLayer/SpellBar/PlantBox" unique_id=276377288]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fill_mode = 3
nine_patch_stretch = true
texture_progress = SubResource("PlaceholderTexture2D_dnqdc")
tint_progress = Color(0, 0, 0, 0.5882353)

[node name="LockIcon" type="TextureRect" parent="CanvasLayer/SpellBar/PlantBox" unique_id=110577226]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.215, 0.215)
pivot_offset = Vector2(2.5, 0)
texture = ExtResource("7_p8t1n")

[node name="spell_status" type="Label" parent="." unique_id=1914322485]
texture_filter = 2
offset_left = -29.0
offset_top = -22.0
offset_right = 641.0
offset_bottom = 110.0
scale = Vector2(0.08, 0.08)
text = "googoogaagaa"
label_settings = SubResource("LabelSettings_l7a1p")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AimCursor" type="Sprite2D" parent="." unique_id=1103398792]
process_mode = 3
visibility_layer = 4
z_index = 10
position = Vector2(521, 227)
rotation = -2.3560085
scale = Vector2(0.04450849, 0.04450849)
texture = ExtResource("8_8d5gg")

[node name="CastBar" type="ProgressBar" parent="." unique_id=1575738389]
offset_left = -17.0
offset_top = -19.0
offset_right = 16.0
offset_bottom = -15.0
theme_override_styles/background = SubResource("StyleBoxFlat_8d5gg")
theme_override_styles/fill = SubResource("StyleBoxFlat_5wdo2")
max_value = 0.5
step = 0.0
show_percentage = false
